el datatable se alimenta de un json externo

--- a/electron-datatables/index.html
+++ b/electron-datatables/index.html
@@ -10,14 +10,14 @@
 
 
         <table id="example" class="display" style="width:100%">
-            <thead>
+            <!--<thead>
                 <tr>
                     <th>Codigo</th>
                     <th>Nombre</th>
                     <th>Continente</th>
                     <th>Poblacion</th>
                 </tr>
-            </thead>
+            </thead> -->
         </table>
 
 
