agrege un select para los superpoderes, nos servira para mostrar marcas de carros, etc

--- a/electron-datatables/index.html
+++ b/electron-datatables/index.html
@@ -10,14 +10,13 @@
 
 
         <table id="example" class="display" style="width:100%">
-            <!--<thead>
+            <thead>
                 <tr>
-                    <th>Codigo</th>
                     <th>Nombre</th>
-                    <th>Continente</th>
-                    <th>Poblacion</th>
+                    <th>Genero</th>
+                    <th>Designacion</th>                    
                 </tr>
-            </thead> -->
+            </thead>
         </table>
 
 
