intentos de escribir en un json

--- a/json-node/index.html
+++ b/json-node/index.html
@@ -5,6 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<h3>Formulario para los modelos - Prueba de escritura JSON</h3>
+	<form id="form-modelos">
+		<label for="codigo"> Codigo Modelo</label>
+		<input type="text" name="codigo" placeholder="modelo" id="codigo-modelo"><br>
+		<label for="nombre-modelo">Nombre del Modelo</label>
+		<input type="text" name="nombre-modelo" id="nombre-modelo" placeholder="Nombre de Modelo"><br>		
+	</form>
+	<button id="btn-modelo">Guardar modelo</button>
+	<hr>
 	<h3>Formulario par Nueva Marca</h3>
 	<form id="form_nueva_marca">
 		<label>Nombre Marca</label>
