Se guardan en el data.json y se actualiza automaticamente la tabla de datatables... :3

--- a/json-node/index.html
+++ b/json-node/index.html
@@ -13,6 +13,11 @@
 		<input type="text" name="nombre-modelo" id="nombre-modelo" placeholder="Nombre de Modelo"><br>		
 	</form>
 	<button id="btn-modelo">Guardar modelo</button>
+	<button id="btn-tabla-modelos">Ver tabla</button>
+	<br>
+	<table id="tabla-modelos">
+		
+	</table>
 	<hr>
 	<h3>Formulario par Nueva Marca</h3>
 	<form id="form_nueva_marca">
