--- a/json-node/index.html
+++ b/json-node/index.html
@@ -10,32 +10,18 @@
 		<label for="nombre-modelo">Nombre del Modelo</label>
 		<input type="text" name="nombre-modelo" id="nombre-modelo" placeholder="Nombre de Modelo"><br>		
 	</form>
-	<button id="btn-modelo">Guardar modelo</button>
+	<button id="btn-modelo">Guardar</button>
 	<button id="btn-tabla-modelos">Ver tabla</button>	
-	<br>
+	<br><br><br>
 	<table id="tabla-modelos">
-		
+		<thead>
+			<tr>
+				<th>Codigo</th>
+				<th>Nombre</th>
+			</tr>
+		</thead>
 	</table>
 	<hr>
-
-
-	<h3>Formulario par Nueva Marca</h3>
-	<form id="form_nueva_marca">
-		<label>Nombre Marca</label>
-		<input type="text" name="nombre_marca" placeholder="Marca de Vehiculo" id="nombre_marca" required>
-		<input type="submit" name="guardar" id="guardar" value="Guardar">
-	</form>
-	<hr>
-	
-	<h3>Mostrando las marcas en un select</h3>
-	<select id="marca" name="marca"></select>
-	<hr>
-	
-	<button id="btn">Ver Tabla</button>
-	<h3>Mostrando las marcas en una tabla</h3>
-	<table id="example">
-		
-	</table>
 
 <script>
 	require('./script.js');
