se agrego la parte de modelos en la app de rentcar

--- a/rentcar-electron/marcas.html
+++ b/rentcar-electron/marcas.html
@@ -30,7 +30,12 @@
     		<div class="row">
     			<div class="col-12">
     				<table id="tabla-marcas" class="table table-hover">
-    					
+    					<thead>
+                            <tr>
+                                <th>Codigo</th>
+                                <th>Marca</th>                  
+                            </tr>               
+                        </thead>
     				</table>
     			</div>
     		</div>
