--- a/rentcar-electron/modelos.html
+++ b/rentcar-electron/modelos.html
@@ -35,7 +35,13 @@
     		<div class="row">
     			<div class="col-12">
     				<table id="tabla-modelos" class="table table-hover">
-    					
+    					<thead>
+                            <tr>
+                                <th>Codigo</th>
+                                <th>Marca</th>
+                                <th>Modelo</th>
+                            </tr>               
+                        </thead>
     				</table>
     			</div>
     		</div>
